# raas-dapp

./: .gitignore  Cargo.toml  README.md  flake.nix
client/web/: package-lock.json  package.json
client/web/src/components/: Section.svelte  Wallet.svelte
client/web/src/lib/: account.store.js  chain.local.js  client.store.js  dapps.store.js
client/web/src/routes/: +layout.svelte  +page.svelte
contracts/archway/referrals-hub/: Cargo.toml  contract.rs
contracts/archway/referrals-rewards-pot/: Cargo.toml  contract.rs
crates/core/: Cargo.toml  collect.rs  common.rs  core.rs  dapp.rs  hub.rs  lib.rs  referral.rs  rewards_pot.rs
crates/core/hub/: collect.rs  common.rs  dapp.rs  msg.rs  query.rs  referral.rs  reply.rs
crates/cosmwasm/: Cargo.toml  referrals-cw.rs
crates/cosmwasm/archway/: Cargo.toml  archway.rs  core_deps_impl.rs  driver.rs
crates/cosmwasm/archway-referrals/: Cargo.toml  core_deps_impl.rs  driver.rs
crates/cosmwasm/archway-rewards-pot/: driver.rs
crates/cosmwasm/archway/api/: Cargo.toml  api.rs  cache.rs  hub.rs  rewards_pot.rs
crates/cosmwasm/archway/drivers/: Cargo.toml  drivers.rs  hub.rs  rewards_pot.rs
crates/cosmwasm/archway/drivers/hub/: core_deps_impl.rs  state.rs
crates/cosmwasm/archway/drivers/rewards_pot/: state.rs
crates/cosmwasm/archway/rewards-pot/: Cargo.toml
crates/cosmwasm/iface/: Cargo.toml  referrals-cw.rs  rewards-pot-cw.rs
crates/cosmwasm/parse/: Cargo.toml  parse-cw.rs
crates/cosmwasm/rewards-pot/: Cargo.toml  rewards-pot-cw.rs
crates/storage/: Cargo.toml  storage.rs
test/: Cargo.toml  it.rs  referrals_core.rs
test/referrals_core/: collect.rs  dapp.rs  exec.rs  referral.rs
test/referrals_core/collect/: dapp.rs  referrer.rs
test/referrals_core/dapp/: configure.rs  register.rs  set_fee.rs  set_rewards_pot.rs
test/referrals_core/referral/: record.rs  register.rs  transfer_ownership.rs
tests/: Cargo.toml  it.rs  referrals_archway_drivers.rs  referrals_core.rs  referrals_cw.rs  referrals_parse_cw.rs  referrals_storage.rs
tests/referrals_archway_drivers/: hub.rs  rewards_pot.rs
tests/referrals_core/: collect.rs  dapp.rs  exec.rs  referral.rs
tests/referrals_core/collect/: dapp.rs  referrer.rs
tests/referrals_core/dapp/: configure.rs  deregister.rs  register.rs  set_fee.rs  set_rewards_pot.rs
tests/referrals_core/referral/: record.rs  register.rs
tests/referrals_core_hub/: collect.rs  dapp.rs  exec.rs  referral.rs
tests/referrals_core_hub/collect/: dapp.rs  referrer.rs
tests/referrals_core_hub/dapp/: activate.rs  configure.rs  deactivate.rs  deregister.rs  register.rs  set_fee.rs  set_rewards_pot.rs
tests/referrals_core_hub/referral/: record.rs  register.rs  transfer_ownership.rs
xtask/: Cargo.toml  cli.rs  xtask.rs
