[workspace]
members = [ 
  # deeper the crate = more platform specific
  "crates/core", 
  "crates/storage", 
  "crates/cosmwasm/*", 
  "crates/cosmwasm/archway/*", 
  "contracts/archway/*", 
  "tests", 
  "xtask"
]

[workspace.dependencies]
thiserror = "1.0.38"
serde = "1.0.157"

kv-storage = { git = "https://github.com/v26-solutions/kv-storage" }
kv-storage-bincode = { git = "https://github.com/v26-solutions/kv-storage" }
kv-storage-cosmwasm = { git = "https://github.com/v26-solutions/kv-storage" }

cosmwasm-schema = "1.2.2"
cosmwasm-std = "1.2.2"

archway-bindings = { git = "https://github.com/chris-ricketts/archway-bindings" }

# crates in workspace
referrals-core = { path = "crates/core" }
referrals-storage = { path = "crates/storage" }

referrals-cw = { path = "crates/cosmwasm/iface" }
referrals-parse-cw = { path = "crates/cosmwasm/parse" }

referrals-archway = { path = "crates/cosmwasm/archway" }
referrals-archway-api = { path = "crates/cosmwasm/archway/api" }
referrals-archway-drivers = { path = "crates/cosmwasm/archway/drivers" }
