[package]
name = "it"
version = "0.0.0"
edition = "2021"

[lib]
path = "it.rs"
doctest = false

[dependencies]
thiserror.workspace = true
kv-storage.workspace = true
cosmwasm-std.workspace = true
dbg-pls.workspace = true
archway-bindings.workspace = true

referrals-core.workspace = true
referrals-storage.workspace = true

referrals-cw.workspace = true
referrals-parse-cw.workspace = true

referrals-archway-drivers.workspace = true

expect-test = "1.4.1"
ron = { version = "0.8.0", features = [ "integer128" ] }
serde = "1.0.157"

