[package]
name = "referrals-archway-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "api.rs"
test = false
doctest = false

[dependencies]
thiserror.workspace = true
kv-storage.workspace = true
kv-storage-bincode.workspace = true
kv-storage-cosmwasm.workspace = true
archway-bindings.workspace = true

cosmwasm-std = { workspace = true, features = [ "staking" ] }

referrals-core.workspace = true
referrals-storage.workspace = true
referrals-cw.workspace = true
